First commited as before_60898_rev1